--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="item" id="bank">
         <h3 id="name"></h3>
         <p class="details"><span>Balance</span><span><span id="balance"></span> kr</span></p>
+        <p class="details"><span>Laptops</span><span id="laptops-owned"></span></p>
         <button class="loan-btn btn" id="loan-btn">Get a loan</button>
     </div>
     <div class="item" id="work">
