added comments and fixed loanbug

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="item" id="laptops">
         <h3>Laptops</h3>
-        <select name="Laptops" id="laptops-dropdown" onchange="getLaptopInfo(this.value)">
+        <select name="Laptops" id="laptops-dropdown">
             <option value="undefined">Choose a laptop</option>
         </select>
         <p style="font-weight: bold; margin-bottom: 0; display: none;" id="feature-title">Features:</p>
